add_library(smithlab_cpp STATIC
  GenomicRegion.cpp
  MappedRead.cpp
  OptionParser.cpp
  QualityScore.cpp
  bisulfite_utils.cpp
  chromosome_utils.cpp
  sim_utils.cpp
  smithlab_os.cpp
  smithlab_utils.cpp
  zlib_wrapper.cpp
  dna_four_bit.cpp
  cigar_utils.cpp
  sam_record.cpp
  htslib_wrapper.cpp)